--- a/esame.2
+++ b/esame.2
@@ -306,6 +306,61 @@ prop21
 # anno 2011   = 0.22 x 6000 = 1320 Km^2
 # anno 2021   = 0.21 x 6000 = 1260 Km^2
 
+regione <- ("campi coltivati")
+kmq <- c(180,540,960,1320,1260)
+anni <- c("1992","1997","2002","2011","2021")
+df <- data.frame(anni,regione,kmq)
+
+plot(df, type="o", col="orange")
+
+datakmq <- read_csv("data.csv", header = TRUE, sep= ",")
+
+
+
+# Libraries
+library(ggplot2)
+library(hrbrthemes)
+# create data
+xValue <- 1:10
+yValue <- abs(cumsum(rnorm(10)))
+data <- data.frame(xValue,yValue)
+
+df <- data.frame(anni,kmq)
+
+# Plot
+prova %>%
+   ggplot(aes(x= Anni, y= kmq, color = suolo)) +
+  geom_line()
+
+
+# basic area chart
+dff <- data.frame(anni,kmq)
+
+ggplot(dff, aes(x = anni, y = kmq)) +
+   geom_line(color = "red", 
+            size=1 )
+  geom_area(fill="orange", color="black") +
+  labs(title = "cambiamento",
+       x = "anni",
+       y = "km^2")
+
+
+
+
+
+
+
+
+
+
+
+plot(df$kmq, type="b", lty="dashed", col="red", axes=FALSE, ann=FALSE))
+lines(df$kmq, type="l", col="chocolate1")
+title(main="Colonizzazione deserto", col.main="blue", font.main="3", xlab="Anni", ylab="Km^2")
+box()
+axis(1, at=1:5, lab=df$anni)                                                                                #x
+axis(2, las=1, at=seq(300))                                                     #y
+axis(2, las=1, at=seq(min(incassi), max(incassi), 300))                                                     #y   
 
 #Purtroppo bisogna indicare che l'area occupata è sottostimata in quanto molti campi non attivi risultano aridi e nell'UnSuperClass non sono riuscito a distinguerli con il #deserto. Aggiungo immagine in cui campi sono visibili in light green
 
