--- a/esame.2
+++ b/esame.2
@@ -130,7 +130,10 @@ plot(asc_un21_10_ndmi$map, main="2021")
 ----------------------------------------------------------------------------
 
 -------------------------------------------------------------------------------------------------
-## altro indice UI
+## altro indice UI 
+# UI = (SWIR2-NIR)/(SWIR2+NIR)
+
+# Urbanized areas occupy one extremity of the scale, exposed sand and water at the other extreme with vegetated areas having an intermediate value.
 
 UI87_crop_10 <- (asc87_crop10[[6]] - asc87_crop10[[4]])/(asc87_crop10[[6]] + asc87_crop10[[4]])
 UI92_crop_10 <- (asc92_crop10[[6]] - asc92_crop10[[4]])/(asc92_crop10[[6]] + asc92_crop10[[4]])
@@ -163,13 +166,24 @@ UI21_crop_10r <- reclassify(UI21_crop_10, cbind(4, Inf, NA), right=FALSE)
 UI21_crop_10re <- reclassify(UI21_crop_10r, cbind(-Inf, -1, NA))
 plot(UI21_crop_10re)
 
+png("D:/lab/asc/imm/UIra.png")
 par(mfrow=c(2,3))
-plot(UI87_crop_10re, main="1987")
-plot(UI92_crop_10re, main="1992")
-plot(UI97_crop_10re, main="1997")
-plot(UI02_crop_10re, main="2002")
-plot(UI11_crop_10re, main="2011")
-plot(UI21_crop_10re, main="2021")
+plot(UI87_crop_10re, main="1987", axes = FALSE)
+plot(UI87_crop_10re, main="1992", axes = FALSE)
+plot(UI97_crop_10re, main="1997", axes = FALSE)
+plot(UI02_crop_10re, main="2002", axes = FALSE)
+plot(UI11_crop_10re, main="2011", axes = FALSE)
+plot(UI21_crop_10re, main="2021", axes = FALSE)
+dev.off()
+
+--
+ggr87ui <- ggplot(UI87_crop_10re) + ggtitle("Anno 1987") + theme(axis.title.x = element_blank(), axis.title.y = element_blank())
+ggr92ui <- ggRGB(asc92_crop, 3, 2, 1, stretch="Lin") + ggtitle("Anno 1987") + theme(axis.title.x = element_blank(), axis.title.y = element_blank())
+ggr97ui <- ggRGB(asc97_crop, 3, 2, 1, stretch="Lin") + ggtitle("Anno 1987") + theme(axis.title.x = element_blank(), axis.title.y = element_blank())
+ggr02ui <- ggRGB(asc02_crop, 3, 2, 1, stretch="Lin") + ggtitle("Anno 1987") + theme(axis.title.x = element_blank(), axis.title.y = element_blank())
+ggr11ui <- ggRGB(asc11_crop, 3, 2, 1, stretch="Lin") + ggtitle("Anno 1987") + theme(axis.title.x = element_blank(), axis.title.y = element_blank())
+ggr21ui <- ggRGB(asc21_crop, 3, 2, 1, stretch="Lin") + ggtitle("Anno 1987") + theme(axis.title.x = element_blank(), axis.title.y = element_blank())
+--
 
 #faccio UnsuperClass dell'ultima cosi da ricavare la percentuale di terra colonizzata 
 
